--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "webpack-bundle-plugin",
+  "name": "@seedrs/bundle-script-tag-plugin",
   "version": "0.0.0",
   "description": "A webpack plugin that generates a script that loads your main bundle",
   "main": "lib/index.js",
-  "repository": "https://github.com/Seedrs/webpack-bundle-plugin",
+  "repository": "https://github.com/Seedrs/bundle-script-tag-plugin",
   "author": "tech@seedrs.com",
   "license": "MIT",
   "private": false,
@@ -18,6 +18,7 @@
     "babel-eslint": "^8.2.3",
     "babel-preset-env": "^1.6.1",
     "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.11.0",
     "semantic-release": "^15.1.7"
