--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.0.0",
   "description": "A webpack plugin that generates a script that loads your main bundle",
   "main": "lib/index.js",
-  "repository": "https://github.com/Seedrs/bundle-script-tag-plugin",
+  "repository": "git@github.com:Seedrs/bundle-script-tag-plugin.git",
   "author": "tech@seedrs.com",
   "license": "MIT",
   "private": false,
   "scripts": {
     "lint": "eslint ./src/*",
-    "build": "babel src -d lib"
+    "build": "babel src -d lib",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@seedrs/eslint-config-seedrs-base": "^1.0.3",
