--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "lint": "eslint ./src/*",
     "build": "babel src -d lib",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release -b HEAD"
   },
   "devDependencies": {
     "@seedrs/eslint-config-seedrs-base": "^1.0.3",
