--- a/docker-compose.buildkite.yml
+++ b/docker-compose.buildkite.yml
@@ -14,3 +14,5 @@ services:
       - NPM_TOKEN
       - GITHUB_TOKEN
       - SSH_AUTH_SOCK=/ssh-agent
+      - GIT_TERMINAL_PROMPT=0
+      - GIT_ASKPASS=echo
