--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -13,6 +13,7 @@ steps:
     command: .buildkite/steps/publish.sh
     agents:
       queue: npm-packages
+    branches: master
     concurrency: 1
     concurrency_group: 'bundle-script-tag/publish'
     env:
